fix: test for deactive account
